--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -7,6 +7,15 @@
 @import 'rental/rental-listing.scss';
 @import 'rental/rental-detail.scss';
 
+//form
+@import 'form/form.scss';
+
+.clickable {
+  &:hover {
+    cursor: pointer;
+  }
+}
+
 .page-title {
   font-size: 30px;
   font-weight: 700;
@@ -23,4 +32,17 @@
 
 .condo {
   color: #d68000;
+}
+
+.btn-bookwithme {
+  background-color: $main-color !important;
+  border-color: $main-color !important;
+  color: white !important;
+  padding: 15px 30px;
+  font-size: 20px;
+
+  &:hover, &:focus, &:active {
+    border-color: $main-color !important;
+    background-color: $main-color !important;
+  }
 }
