Adds booking component and booking creation functionality. Adds toast messages and confirmation modal

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,3 +3,4 @@ $main-text-grey-color: #4a4a5a;
 $light-grey-color: #898989;
 $main-black-color: #28232a;
 $main-white-color: #ededed;
+$light-grey-color-2: #dedada;
