--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -10,6 +10,9 @@
 //form
 @import 'form/form.scss';
 
+//booking
+@import 'booking/booking.scss';
+
 .clickable {
   &:hover {
     cursor: pointer;
