Adds rental and booking manage section, Adds delete functionality, Displays username on Rental Detail and disable bookings for not logged in users

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -6,6 +6,7 @@
 //rental
 @import 'rental/rental-listing.scss';
 @import 'rental/rental-detail.scss';
+@import 'rental/rental-manage.scss';
 
 //form
 @import 'form/form.scss';
