--- a/src/styles/rental/_rental-listing.scss
+++ b/src/styles/rental/_rental-listing.scss
@@ -15,6 +15,7 @@
   /*SINGLE CARD STYLES */
   .bookwithme-card {
     border: none;
+    margin-bottom: 20px;
 
     .card-block {
       padding-top: 8px;
